Accessibility Updates - last of colour contrast issues resolved, Footer alignment fixed

--- a/Galaxial - Dashboard - Social Entrepreneurship Lab_files/selab.css
+++ b/Galaxial - Dashboard - Social Entrepreneurship Lab_files/selab.css
@@ -20,3 +20,18 @@
 .footer-text{
     color:#313131 !important;
 }
+
+footer{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+.flexcontent{
+    display: inline;
+}
